pygobject (3.29.2-1) UNRELEASED; urgency=medium

  * d/watch: Watch for development versions
  * New upstream release
  * d/copyright: Update

 -- Simon McVittie <smcv@debian.org>  Tue, 14 Aug 2018 11:32:47 +0100

pygobject (3.28.3-1) unstable; urgency=medium

  * Team upload
  * New upstream release
  * Set Rules-Requires-Root to no
  * Don't install detailed upstream ChangeLog, only NEWS
  * Standards-Version: 4.2.0
  * d/copyright: Remove trailing whitespace
  * Sort (build-)dependencies with wrap-and-sort -a
  * Remove X-Python(3)-Version fields that are satisfied by oldstable
  * Adjust override_dh_clean to avoid a Lintian false positive
  * d/tests/gitest.py: Don't fail on merged /usr systems

 -- Simon McVittie <smcv@debian.org>  Tue, 14 Aug 2018 10:57:50 +0100

pygobject (3.28.2-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.1.4

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 13 Apr 2018 16:55:29 -0400

pygobject (3.28.1-1) unstable; urgency=medium

  * New upstream release
  * Build-Depend on pytest
  * Update Vcs fields for migration to https://salsa.debian.org/
  * Bump debhelper compat to 11
  * debian/docs: AUTHORS and README are no longer provided

 -- Jeremy Bicha <jbicha@debian.org>  Sun, 25 Mar 2018 18:59:29 -0400

pygobject (3.26.1-2) unstable; urgency=medium

  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 15 Dec 2017 20:50:28 -0500

pygobject (3.26.1-1) unstable; urgency=medium

  * New upstream release (Closes: #879638)
    - Bump pycairo requirement to 1.11.1
    - Switch build-dep from gnome-common to autoconf-archive (Closes: #829934)
    - Drop all patches, they have been merged upstream
  * debian/control.in:
    - Drop python-gobject-dev and python-gobject-dbg transitional packages,
      nothing depends against it anymore (Closes: #878781)
  * debian/rules: Run the test with locale C.UTF-8