@@ -1,1 +1,1 @@
-usr/lib/python*
+usr/lib/python2*/*-packages/gi/_gi*_d.so
