@@ -1,1 +1,1 @@
-usr/lib/python*/*-packages/gi/*cairo*
+usr/lib/python3*/*-packages/gi/_gi_cairo.*-3[0-9]m-*.so
