@@ -1,1 +1,1 @@
-usr/lib/python*
+usr/lib/python3*/*-packages/gi/*-3[0-9]dm-*.so
