@@ -1,1 +1,5 @@
-usr/lib/python*
+usr/lib/python3*/*-packages/gi/_gi.*so
+usr/lib/python3*/*-packages/gi/*.py
+usr/lib/python3*/*-packages/gi/*/*.py
+usr/lib/python3*/*-packages/*.egg-info
+usr/lib/python3*/*-packages/pygtkcompat/*.py
