@@ -3,6 +3,7 @@ pygobject (3.29.2-1) UNRELEASED; urgency=medium
   * d/watch: Watch for development versions
   * New upstream release
   * d/copyright: Update
+  * Build using setup.py and pybuild
 
  -- Simon McVittie <smcv@debian.org>  Tue, 14 Aug 2018 11:32:47 +0100
 
